# room_101

./: .env  .envrc  .gitignore  .mcp.json  CLAUDE.md  Cargo.nix  Cargo.toml  DATABASE.md  TODO.md  clippy.toml  devenv.nix  dioxus-cli.nix  flake.nix  mcp-language-server.nix  schema.surql  styles.css  treefmt.toml
.cargo/: config.toml
.claude/: memory.json  settings.json  settings.local.json
.config/: nextest.toml
.sqlx/: query-05612b0244209ac4d2bb5875395909ab92a8f9d6495f3eeb98cb5871c170f75c.json  query-05ba513744f374e04164ad005b1d470f1cb0a8209ee0fe0207a802db7f84ba2e.json  query-090b3ed21a0d5c57e41b3f7a7f4f7b4edb4bc58230f4dd534bf33c56fb8782d8.json  query-092ae7b6884bb790c6f0698ea9dff33e91f96c6ca9c354ae61c3f927bbf45229.json  query-09d86162dae934da415cb2b6fd8a35e44f3fe4c3491f8b37ead9637e022b5256.json  query-0b3605485a0b265dcd383de8a0b57a3c019a2f5bbad05cf2f53b4555cf1d2a31.json  query-127b5b1645a0f305687e1f0e8ff615b85b0e047f419b8fda00e5d8e03053ab80.json  query-1d5b6ff8f5b5176ca793247d4ebedfac17d00d2f6b378365e01ebcc04fbf43b6.json  query-27b7b9170b2803bd270b7f6c73293fa0772bd609b1684aa06de33c9a84e4e788.json  query-3607a4495f65085d34afc7d0d50c3e3f24b7ed7cf320987815952ba049da7d12.json  query-3e9ba5827644dd7ef45dfe91fedaa8a114dd8b1180005925743174feda5af1bd.json  query-4539e5db95d89b46fe94213bbaf6c099c9fec3e4d27c68bd681bf11e15a83e5b.json  query-5afa516694a83d276ce31bdc50c3f9241b784b740cc771d839c3ccb3a1f63b6c.json  query-5c222284675236e077a874d8c177b65419acd1f3502d3895219fc45711e32923.json  query-77f292f499216ddc97d92923e4e6add68f4dc406b29ad037f44b84a2c850229a.json  query-7e634f6d6e9cd574953faeedb388ab9b097b446dc7a8570aa6979fda0125b227.json  query-8418f159a5770e2928b72db052382d093ecca470b1b304ef5d2a26dae9fbf896.json  query-85a325eab564f68e47ec16614c4c1eb9269303bf0e0fa634d1059e2c8a132aa0.json  query-a3932706905e90accd8f861f8c9b4639e423a395ae58086ab7fc66cb6b06f7eb.json  query-a5142137021a2ae83851821196b20b2b5b93c0c5b85e405e941005e09f412f97.json  query-a875fb6f5765f961ed7cffa9147ee49a362a7b2b54e65cd5c745246cd76605de.json  query-be8f3efa475b76a40fe403fd421f796520d88915eba2524fcaf3957470a29a9c.json  query-c265d8b7cd35299fb337c9ae4370c2287669235ff74a3aa96eaf5e908cfcbeeb.json  query-cc90148e4147358078c446c4a882e9d3e2311dc92b19c5257c9bae19f0313284.json  query-f08dd179983ed9a20e53b6d5fa96b292730452b4e6e278d501ec24dbfd826932.json  query-ffed050dd4c51186bf8f16e502285052ccb3605bd58801ada12215ca098916d0.json
migrations/: 20250101000000_initial_schema.sql  20250829000001_add_age_key_to_identities.sql  20250829000002_add_age_public_key_to_peers.sql  20250829000003_create_secrets_table.sql
src/: args.rs  (+13 more)
(+47 files in other folders)
