[package]
name = "room_101"
version = "0.1.0"
edition = "2024"

[dependencies]
iroh = "0.91.1"
iroh-gossip = "0.91.0"
anyhow = "1.0"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
hex = "0.4"
surrealdb = { version = "2.3.7", features = ["kv-surrealkv", "kv-mem"] }
serde = { version = "1.0.219", features = ["derive"] }
rand = "0.8.5"

# Tracing and logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
poem = { version = "3.1.12", features = ["anyhow", "test"] }
maud = { version = "0.27.0", features = ["poem"] }
