[package]
name = "room_101"
version = "0.1.0"
edition = "2024"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
# Deny print statements - use proper logging instead
print_stdout = "deny"
print_stderr = "deny"


[dependencies]
iroh = { version = "0.91.1" }
iroh-gossip = "0.91.0"
anyhow = "1.0"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
hex = "0.4"
serde = { version = "1.0.219", features = ["derive"] }
rand = "0.8.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.4"
ed25519-dalek = "2.2.0"
serde_json = "1.0.142"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.44", features = ["derive"] }
chrono-humanize = "0.2.3"
hostname = "0.4"
uuid = { version = "1.18.0", features = ["serde"]}
itertools = "0.13"
futures = "0.3"
age = "0.11.1"
sha2 = "0.10"
hostname-validator = "1.1.1"
ractor = "0.15.8"
iroh-base = "0.91.2"
surrealdb = { version = "2.3.7", features = ["kv-surrealkv", "kv-mem"] }
nu-ansi-term = "0.50.1"
